--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -10,7 +10,8 @@ baseURL: 'https://pengfeichen-academic.github.io/zh-cn/' # Website URL
 ## LANGUAGE
 ############################
 
-defaultContentLanguage: en
+#defaultContentLanguage: en
+defaultContentLanguage: zh
 hasCJKLanguage: false
 defaultContentLanguageInSubdir: false
 removePathAccents: true
